--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - 'mongo'
 
   mongo:
-    image: 'mongo:latest'
+    image: 'mongo:4.4.6'
     container_name: 'telereq_mongo'
     volumes:
       - data-volume:/data/db
